--- a/index.html
+++ b/index.html
@@ -288,6 +288,8 @@
                       <li><b>•  [Invited Talk]</b> <u>Min-Seong</u> presented an invited talk entitled "100Gb/s급 디지털 인터페이스 회로 설계" at KAIST (hosted by IDEC).</li>
                       <li><b>•  [Invited Talk]</b> <u>Min-Seong</u> presented an invited talk entitled "Unlocking AI's True Potential : The Critical Role of High-Speed Interfaces" at Dongguk University.</li>
                       <li><b>•  [Invited Talk]</b> <u>Min-Seong</u> presented an invited talk entitled "Unlocking AI's True Potential : The Critical Role of High-Speed Interfaces" at Yonsei University.</li>
+                      <li><b>• [Patent]</b> A patent entitled "주입 잠금 오실레이터 기반 물리적 복제 불가능 함수" has been registered with the Korean Intellectual Property Office.</li>
+
 
 
 
@@ -310,6 +312,7 @@
                       <li><b>•  [Award]</b> <u>Seung-Hwan</u> received the Best Student Paper Award (Bronze) from the IEEE Seoul Section.</b> </li>                    
                       <li><b>•  [Award]</b> <u>Min-Seong</u> received the Achievement Award (공로상) from the IEIE (대한전자공학회) Semiconductor Society.</b></li>
                       <li><b>•  [Award]</b> <u>Min-Seong</u> received the Achievement Award (공로상) from the IEIE (대한전자공학회).</b></li>
+                      <li><b>• [Patent]</b> A patent entitled "6 트랜지스터 정적 램 및 이를 이용한 프로세싱 인 메모리 가속 장치" has been registered with the Korean Intellectual Property Office.</li>
                       <li>[2025.11] </li>                      
                       <li><b>•  [Service]</b> <u>Min-Seong</u> served as an Organizing Committee Member for the 2024 IEIE Fall Conference.</li>
                       <li><b>•  [Invited Talk]</b> <u>Min-Seong</u> presented an invited talk entitled "High-Speed Interface Circuit Design" at the University of Seoul.</li>
@@ -343,6 +346,7 @@
                           <a href="https://ieeexplore.ieee.org/document/11137667" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>                    
                       <li><b>•  [Service]</b> <u>Min-Seong</u> served as a Session Chair and on the Organizing Committee for ITC-CSCC 2025.</li>
                       <li><b>•  [Service]</b> <u>Min-Seong</u> served on the Program Committee for the 2025 상용반도체개발 기술워크숍.</li>
+                      <li><b>• [Patent]</b> A patent entitled "ADC 양자 인공신경망과 범용 Compute-in-Memory." has been registered with the Korean Intellectual Property Office.</li>
                       <li>[2025.6] </li>
                       <li><b>•  [Publication-Journal]</b> A paper entitled "A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology" has been accepted for publication in the IEEE Journal of Solid-State Circuits (JSSC).</b></u>
                           <a href="https://ieeexplore.ieee.org/document/11029275" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>
@@ -359,6 +363,7 @@
                       <li><b>•  [Invited Talk]</b> <u>Min-Seong</u> presented a talk entitled "The Future of High-Speed Wireline: Innovations in DSP-Based Transceiver Design" at ICEIC.</li>
                       <li><b>•  [Service]</b> <u>Min-Seong</u> served as a Session Chair and on the Organizing Committee for ICEIC.</li>
                       <li><b>•  [Service]</b> <u>Min-Seong</u> served as the Executive Director (상임이사) of the Next-Generation Leader Division at the IEIE.</li>
+
                       
                     </ul>
                   </div>
@@ -377,12 +382,11 @@
                         <a href="https://ieeexplore.ieee.org/document/10586762" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>
                     <li>[2024.9] </li>
                     <li><b>•  [Publication-Journal]</b> A paper entitled "3.2-GHz Digital Phase-Locked Loop with Autocorrelation-based Direct Jitter Correction" has been accepted for publication in IEEE Transactions on Circuits and Systems II (TCAS-II).
-                        <a href="https://ieeexplore.ieee.org/document/10507171" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>                                    
+                        <a href="https://ieeexplore.ieee.org/document/10507171" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>
                     <li>[2024.8] </li>
                     <li><b>•  [Publication-Conference]</b> A paper entitled "A 14-to-32-Gb/s Deadzone-Free Referenceless CDR with Autocovariance-based Frequency Detector in 40-nm CMOS Technology" has been accepted for presentation at the 2024 IEEE Asian Solid-State Circuits Conference (ASSCC).
                         <a href="https://ieeexplore.ieee.org/document/10848602" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a>
                         <a href="https://www.newshyu.com/news/articleView.html?idxno=1017521" target="_blank" rel="noopener noreferrer" class="news-link">[News Article]</a></li>
-
                     <li>[2024.7] </li>
                     <li><b>•  [Publication-Journal]</b> A paper entitled "High-Precision Built-In Phase Noise Measurement Circuit With a Hybrid ΔΣ Time-to-Digital Converter for SoC Clocking Applications" has been accepted for publication in IEEE Transactions on Circuits and Systems II (TCAS-II).
                         <a href="https://ieeexplore.ieee.org/abstract/document/10614194" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>
