--- a/index.html
+++ b/index.html
@@ -351,6 +351,13 @@
                       <li><b>•  [Publication-Journal]</b> A paper entitled "A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology" has been accepted for publication in the IEEE Journal of Solid-State Circuits (JSSC).</b></u>
                           <a href="https://ieeexplore.ieee.org/document/11029275" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>
                       <li><b>•  [Grant]</b> <u>HPIC Lab</u> were selected for the "Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging" project, sponsored by the Ministry of Science and ICT (MSIT).</b></li>
+                      <li><b>•  [Publication-Conference]</b> A paper entitled "2.4 GHz BB Phase Detector를 이용한 Fast Lock & Low Noise RF Phase Locked Loop(PLL)" has been accepted at 대한전자공학회 하계학술대회.</li>
+                      <li><b>•  [Publication-Conference]</b> A paper entitled "주입 잠금 발진기 기반 분주비 절감형 디지털 위상 잠금 회로" has been accepted at 대한전자공학회 하계학술대회.</li>
+                      <li><b>•  [Publication-Conference]</b> A paper entitled "저복잡도 구조를 갖는 알렉산더 위상 검출기 기반 위상 - 주파수 검출기 설계" has been accepted at 대한전자공학회 하계학술대회.</li>
+                      <li><b>•  [Publication-Conference]</b> A paper entitled "50Gbaud 송신기를 위한 고속 시리얼라이저" has been accepted at 대한전자공학회 하계학술대회.</li>
+                      <li><b>•  [Publication-Conference]</b> A paper entitled "카운터 기반 비등간격 오버샘플링 PLL" has been accepted at 대한전자공학회 하계학술대회.</li>
+                      <li><b>•  [Publication-Conference]</b> A paper entitled "아날로그 인메모리 컴퓨팅 연산 방식에 대한 분석" has been accepted at 대한전자공학회 하계학술대회.</li>
+                      <li><b>•  [Publication-Conference]</b> A paper entitled "64-way ADC-DSP 기반 수신 회로의 구현: SS-LMS의 학습률의 변화에 기반한 적응형 알고리즘" has been accepted at 대한전자공학회 하계학술대회.</li>                      
                       <li>[2025.5] </li>
                       <li><b>•  [Grant]</b> <u>HPIC Lab</u> were selected for the "Cryogenic Superconducting Quantum Computer Receiver" project, sponsored by Samsung Electronics.</b></li>         
                       <li><b>•  [Publication-Journal]</b> A paper entitled "A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL" has been accepted for publication in IEEE Transactions on Very Large Scale Integration (TVLSI) Systems.</b></u>
