--- a/index.html
+++ b/index.html
@@ -1120,7 +1120,20 @@
                     <div class="user-card-img">
                       <!-- <img src="img/graduate-hanyange.png" alt="" /> -->
                     </div>
-                    <div class="user-card-info">
+                    <table class="alumni-table">
+                      <thead>
+                        <tr>
+                          <th>Name</th>
+                          <th>Affiliation</th>
+                          <th>Program (Period)</th>
+                          <th>Current</th>
+                        </tr>
+                      </thead>
+                      <tbody id="alumni-list-container">
+                      </tbody>
+                    </table>
+
+                    <!--<div class="user-card-info">
                       <p><span>In-Woo Jang (M.S. @ KAIST)</span></p>
                       <p>
                         <span
@@ -1139,7 +1152,7 @@
                       <p><span> Kyu-Ran Park (LX semicon)</span></p>
                       <p><span> Kang-Min Kim (SUGARS)</span></p>
                       <p><span> Dong-Hoe Heo (ram-sCHIP)</span></p>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
@@ -1401,6 +1414,7 @@
     <script src="js/research_projects.js"></script>
     <script src="js/profile.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/update_alumni.js"></script>
 
   <div class="last-updated-fixed">
   <script>
