--- a/index.html
+++ b/index.html
@@ -1166,6 +1166,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-3 section-heading pub-title-row">
+            <div class="sticky-sidebar">
             <h1>Publications</h1>
 
             <ul class="nav nav-tabs flex-row flex-lg-column pub-nav-tabs">
@@ -1194,8 +1195,8 @@
                 >
               </li>
             </ul>
+            </div>
           </div>
-
           <div class="col-12 col-lg-9 tab-content">
             <!-- Pub: Journal -->
             <div id="journal" class="tab-pane fade show active">
