--- a/index.html
+++ b/index.html
@@ -1127,6 +1127,7 @@
                           <th>Affiliation</th>
                           <th>Program (Period)</th>
                           <th>Current</th>
+                          <th>Thesis</th>
                         </tr>
                       </thead>
                       <tbody id="alumni-list-container">
