--- a/index.html
+++ b/index.html
@@ -1048,6 +1048,10 @@
             <!-- M.S. Candidates -->
             <!-- <h3 id="ms-candidates-2503">M.S. Candidates (as of 25.03)</h3>
             <div class="row ms-candidates-2503"></div>             -->
+            
+            <!-- Researchers -->
+            <h3 id="researchers">Researchers</h3>
+            <div class="row researchers"></div>
 
             <!-- Undergraduate Researchers -->
             <h3 id="undergraduate">Undergraduate Researchers</h3>
