--- a/index.html
+++ b/index.html
@@ -1362,7 +1362,18 @@
                       </div>
                       <div class="col-12 col-lg-8 profile-right">
                         <!-- 프로필 우측 설명 -->
-                        <p style="margin-bottom: 8px">
+                        <p 
+                          style="margin-bottom: 8px" id="modal-affiliation-title">
+                          <span>Affiliation</span>
+                        </p>
+                        <p id="modal-affiliation"></p>
+                        <p 
+                          style="margin-bottom: 8px" id="modal-program_period-title">
+                          <span>Program (Period)</span>
+                        </p>
+                        <p id="modal-program_period"></p>
+                        <p 
+                          style="margin-bottom: 8px">
                           <span>Research Interests</span>
                         </p>
                         <ul
