--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,8 @@
                   </div>
                 </div>
               </div> -->
-
+              <div class="d-none alumni-db-loader"></div>
+              
               <h3 class="h3-items" id="alumni">Alumni</h3>
               <div>
                 <div class="wrapper">
