--- a/index.html
+++ b/index.html
@@ -1397,7 +1397,7 @@
                           <span>Details</span>
                         </p>
                         <p id="modal-details"></p>
-                        <p style="margin-bottom: 8px">
+                        <p style="margin-bottom: 8px" id="modal-email-title">
                           <span>Email</span>
                         </p>
                         <p id="modal-email"></p>
