--- a/index.html
+++ b/index.html
@@ -337,8 +337,10 @@
                       <li><b>•  [Grant]</b> <u>Seung-Mo</u> was selected as a recipient of the Master's Student Research Grant from the National Research Foundation (NRF) of Korea.</b></li>
                       <li><b>•  [Grant]</b> <u>Jae-Geon</u> was selected as a recipient of the Master's Student Research Grant from the National Research Foundation (NRF) of Korea.</b></li>
                       <li>[2025.8] </li>
-                      <li><b>•  [Publication-Conference]</b> A paper entitled "Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC" has been accepted at the IEEE Asian Solid-State Circuits Conference (ASSCC).</li>
-                      <li><b>•  [Publication-Conference]</b> A paper entitled "A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization" has been accepted at the IEEE Asian Solid-State Circuits Conference (ASSCC).</li>
+                      <li><b>•  [Publication-Conference]</b> A paper entitled "Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC" has been accepted at the IEEE Asian Solid-State Circuits Conference (ASSCC).
+                           <a href="https://ieeexplore.ieee.org/document/11349558" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>
+                      <li><b>•  [Publication-Conference]</b> A paper entitled "A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization" has been accepted at the IEEE Asian Solid-State Circuits Conference (ASSCC).
+                           <a href="https://ieeexplore.ieee.org/document/11349396" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>
                       <li><b>•  [Invited Talk]</b> <u>Min-Seong</u> presented an invited talk entitled "High-Speed Integrated Circuit Design" at the 2025 SoC Workshop.</li>
                       <li><b>•  [Service]</b> <u>Min-Seong</u> served on the Program Committee for the 2025 SoC Workshop.</li>
                       <li>[2025.7] </li>
