--- a/index.html
+++ b/index.html
@@ -1250,29 +1250,15 @@
               </li>
               <li>
                 EEN3007: Advanced Electronic Circuit and Laboratory
-                (Undergraduate, English, Fall 2022)
+                (Undergraduate, Fall 2022)
               </li>
-              <li>
-                EEN3001: Electronic Engineering Capstone Design1 (Undergraduate,
-                Fall 2022)
-              </li>
-
+              
               <li>ELE2003: Circuit Theory (Undergraduate, Spring 2022)</li>
               <li>
                 COE3051: Engineering Mathematics 1 (Undergraduate, English,
                 Spring 2022)
               </li>
-              <li>
-                EEN3003: Electrical Engineering Lab Practice 1 (Undergraduate,
-                Spring 2022)
-              </li>
-              <li>
-                EEN4006: Electrical Engineering Lab Practice 3 (Undergraduate,
-                Spring 2022)
-              </li>
-              <li>
-                VCC1001: IC-PBL and Visioning (Undergraduate, Spring 2022)
-              </li>
+              
             </ul>
           </div>
         </div>
