--- a/index.html
+++ b/index.html
@@ -1243,21 +1243,10 @@
           <div class="col-12 col-lg-8">
             <h5 id="courses">Courses</h5>
             <ul>
-              <li>ITE4003 : SOC Design (Undergraduate, Fall 2022)</li>
-              <li>
-                EEN3007: Advanced Electronic Circuit and Laboratory
-                (Undergraduate, Fall 2022)
-              </li>
-              <li>
-                EEN3007: Advanced Electronic Circuit and Laboratory
-                (Undergraduate, Fall 2022)
-              </li>
-              
-              <li>ELE2003: Circuit Theory (Undergraduate, Spring 2022)</li>
-              <li>
-                COE3051: Engineering Mathematics 1 (Undergraduate, English,
-                Spring 2022)
-              </li>
+              <li><b>SOC Design</b> (Undergraduate, Fall 2022)</li>
+              <li><b>Advanced Electronic Circuit and Laboratory</b> (Undergraduate, Fall 2022)</li>
+              <li><b>Circuit Theory </b>(Undergraduate, Spring 2022)</li>
+              <li><b>Engineering Mathematics 1 </b>(Undergraduate, Spring 2022)</li>
               
             </ul>
           </div>
