--- a/index.html
+++ b/index.html
@@ -1243,6 +1243,24 @@
           <div class="col-12 col-lg-8">
             <h5 id="courses">Courses</h5>
             <ul>
+              <li><b>Microelectronic Circuits</b> (Undergraduate, Winter 2025)</li>
+              <li><b>Data Transmission Circuit Design for AI Display Application </b> (Graduate, Fall 2025)</li>
+              <li><b>SOC Design</b> (Undergraduate, Fall 2025)</li>
+              <li><b>Electronic Circuits and IOT Lab</b> (Undergraduate, Fall 2025)</li>
+              <li><b>Microelectronic Circuits</b> (Undergraduate, Summer 2025)</li>
+              <li><b>Logic Design and Lab </b>(Undergraduate, Spring 2025)</li>
+              <li><b>Circuit Theory </b>(Undergraduate, Spring 2025)</li>
+              <li><b>Microelectronic Circuits</b> (Undergraduate, Winter 2024)</li>
+              <li><b>SOC Design</b> (Undergraduate, Fall 2024)</li>
+              <li><b>Electronic Circuits and IOT Lab</b> (Undergraduate, Fall 2024)</li>
+              <li><b>Advanced Electronic Circuit and Laboratory</b> (Undergraduate, Fall 2024)</li>
+              <li><b>AI and System Semiconductors</b> (Graduate, Fall 2024)</li>
+              <li><b>Logic Design and Lab </b>(Undergraduate, Spring 2024)</li>
+              <li><b>Circuit Theory </b>(Undergraduate, Spring 2024)</li>
+              <li><b>SOC Design</b> (Undergraduate, Fall 2023)</li>
+              <li><b>Advanced Electronic Circuit and Laboratory</b> (Undergraduate, Fall 2023)</li>
+              <li><b>Design of AI Integrated Circuit </b>(Graduate, Spring 2023)</li>
+              <li><b>Circuit Theory </b>(Undergraduate, Spring 2023)</li>
               <li><b>SOC Design</b> (Undergraduate, Fall 2022)</li>
               <li><b>Advanced Electronic Circuit and Laboratory</b> (Undergraduate, Fall 2022)</li>
               <li><b>Circuit Theory </b>(Undergraduate, Spring 2022)</li>
