--- a/index.html
+++ b/index.html
@@ -639,6 +639,15 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#Modal1"
+                  src="img/chip_new/SS_28_25Jul_2GSs_SAR_ADC.png"
+                />
+                <p>2GS/s SAR ADC for Cryogenic</p>
+                <p>Jul. (28-nm SS)'25</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#Modal1"
                   src="img/chip_new/PICDR_25.png"
                 />
                 <p>PI-based CDR</p>
