--- a/chip_gallery.html
+++ b/chip_gallery.html
@@ -209,6 +209,33 @@
         <div class="col-12 col-lg-3">
           <div class="card chip-detail-card mb-4">
             <img
+              src="img/chip_new/SS_28_25Jul_2GSs_SAR_ADC.png"
+              class="card-img-top"
+              alt="2GS/s SAR ADC for Cryogenic"
+            />
+            <div class="card-body">
+              <h5 class="card-title">2GS/s SAR ADC for Cryogenic</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Date:</span>
+                <span>Jul. (28-nm SS)'25</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Designer:</span>
+                <span>Dong-Eon Jin</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Description:</span>
+                <span>N/A</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-12 col-lg-3">
+          <div class="card chip-detail-card mb-4">
+            <img
               src="img/chip_new/PICDR_25.png"
               class="card-img-top"
               alt="PI-based CDR"
